completing genre's collection changes
