# routes/genres/index.js
@@ -1,6 +1,7 @@
-import { getListMoviesByGenre } from './get.js'
+import { getListMoviesByGenre, getAllGenres } from './get.js'
 import { createGenre } from './post.js'
 // import { updateMovieGenreList } from './patch.js'
 import { updateGenre } from './patch.js'
+import { deleteGenre } from './delete.js'
 
-export { createGenre, getListMoviesByGenre, updateGenre }
+export { createGenre, getListMoviesByGenre, getAllGenres, updateGenre, deleteGenre }
